# Coding-Dragon

./: .gitignore  API_check.py  README.md  app.vue  bun.lockb  nuxt.config.ts  package.json  pyproject.toml
components/: HealthBar.vue  Loader.vue  Scores.vue
pages/: dragon.vue  index.vue  signup.client.vue  signup.vue
public/: big_damage.ogx  medium_damage.ogx  victory.ogx
server/: database.ts  tsconfig.json
server/api/: ping.ts  warrior.delete.ts  warrior.get.ts  warrior.post.ts
